src/test/ui/feature-gates/thread-local-const-init.stderr
error[E0658]: use of unstable library feature 'thread_local_const_init'
  --> $DIR/thread-local-const-init.rs:1:1
   |
LL | thread_local!(static X: u32 = const { 0 });
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #84223 <https://github.com/rust-lang/rust/issues/84223> for more information
   = help: add `#![feature(thread_local_const_init)]` to the crate attributes to enable
   = note: this error originates in the macro `$crate::__thread_local_inner` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
